--- a/index.css
+++ b/index.css
@@ -43,3 +43,21 @@ section {
 }
 
 
+#container{
+    min-height: 800px;
+    position: relative;
+  }
+  #clock{
+    text-align: center;
+    font-size:72px;
+    background-color: #333333;
+    color: #fff;
+    min-width: 380px;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
